<resources>
    <string name="app_name" translatable="false">OTA Updates</string>
    <string name="app_version" translatable="false">v3.0b</string>
    <string name="refreshing">Refreshing&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="dismiss">Dismiss</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="app_github_url" translatable="false">https://github.com/MatthewBooth/OTAUpdates</string>
    <string name="no_support_title">Uh Oh!</string>
    <string name="no_support_message">Your ROM does not support this app.

In order to use this app you MUST be running a custom ROM which has specifically added support</string>
    <string name="no_support_find_out_more">Find out more</string>
    <string name="no_support_find_out_more_link" translatable="false">https://github.com/MatthewBooth/OTAUpdates</string>

    <!-- Update Check -->
    <string name="no_update_available">No updates are available</string>
    <string name="last_checked_for_update">Last checked for an update</string>

    <string name="updated_on">Updated on: </string>
    <string name="added_on">Added: </string>
    <string name="finished_on">Finished: </string>

    <string name="headline">Headline</string>
    <string name="subtitle">Subtitle</string>

    <string name="file_information">File information</string>
    <string name="description">Description</string>
    <string name="error">Error!</string>

    <!-- Information -->
    <string name="name">Name</string>
    <string name="downloads">Downloads</string>

    <!--Update Available -->
    <string name="update_available">Update available</string>
    <string name="filename">Filename</string>
    <string name="filesize">Filesize</string>
    <string name="md5_sum" translatable="false">MD5</string>
    <string name="filehost">Host</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_error">Changelog error!</string>
    <string name="changelog_url">https://raw.githubusercontent.com/MatthewBooth/OTAUpdates/stable/</string>

    <!-- Download Manager -->
    <string name="clear_all_downloads">Clear all</string>

</resources>
